--- a/static/exercise.html
+++ b/static/exercise.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/learnocaml_report.css">
     <link rel="stylesheet" href="/css/learnocaml_tryocaml.css">
     <script src="/js/ace/ace.js" type="text/javascript" charset="utf-8" defer></script>
+    <script src = "/js/analytics/get-local-changes.js"> </script>
     <!-- var editor = ace.edit("learnocaml-exo-editor-pane"); -->
     <!-- editor.setOptions({ fontFamily: 'Inconsolata', fontSize: "18px" }); -->
     <script language="JavaScript" src="/js/learnocaml-exercise.js" defer></script>
