edit: get-local-changes now loading into browser, collecting students code

--- a/static/exercise.html
+++ b/static/exercise.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="/css/learnocaml_report.css">
     <link rel="stylesheet" href="/css/learnocaml_tryocaml.css">
     <script src="/js/ace/ace.js" type="text/javascript" charset="utf-8" defer></script>
-    <script src = "/js/analytics/get-local-changes.js"> </script>
     <!-- var editor = ace.edit("learnocaml-exo-editor-pane"); -->
     <!-- editor.setOptions({ fontFamily: 'Inconsolata', fontSize: "18px" }); -->
     <script language="JavaScript" src="/js/learnocaml-exercise.js" defer></script>
+    <script language="JavaScript" src = "/js/get-local-changes.js"> </script>
   </head>
   <body>
     <!-- Should be kept untouched. -->
@@ -40,7 +40,7 @@
       <a href="/">
       <div class ="logo">
         <img src="/icons/logo_ocaml.svg">
-        <span>Learn OCaml</span>
+        <span>Learn OCaml </span>
         <img src="/icons/logo_ocp.svg">
       </div>
       </a>
