--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
     </div>
     <div id="learnocaml-main-panel" class="hidden">
       <div id="learnocaml-id-div">
-        <span id="txt_connected_as">Connected as</span>
+        <span id="txt_connected_as">Connected </span>
         <input type="text" value="" placeholder="Nickname" size="16" id="learnocaml-nickname">
       </div>
       <div id="learnocaml-sync-buttons"></div>
