feat: collect code on compile (INCOMPLETE)

--- a/static/exercise.html
+++ b/static/exercise.html
@@ -12,7 +12,7 @@
     <!-- var editor = ace.edit("learnocaml-exo-editor-pane"); -->
     <!-- editor.setOptions({ fontFamily: 'Inconsolata', fontSize: "18px" }); -->
     <script language="JavaScript" src="/js/learnocaml-exercise.js" defer></script>
-    <script language="JavaScript" src = "/js/get-local-changes.js"> </script>
+    <script language="JavaScript" src = "/js/get-local-changes.js" defer> </script>
   </head>
   <body>
     <!-- Should be kept untouched. -->
@@ -48,6 +48,12 @@
       <button id="learnocaml-exo-button-grade">
         <img src="/icons/icon_reload_light.svg">
         <span class="label">Grade!</span>
+      </button>
+      -->
+      <!--
+      <button id="learnocaml-exo-button-compile">
+        <img src="/icons/icon_reload_light.svg">
+        <span class="label">Compile</span>
       </button>
       -->
       <div id="learnocaml-nickname">
