feat: Completed API, posts to MongoDB

--- a/static/exercise.html
+++ b/static/exercise.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="/css/learnocaml_report.css">
     <link rel="stylesheet" href="/css/learnocaml_tryocaml.css">
     <script src="/js/ace/ace.js" type="text/javascript" charset="utf-8" defer></script>
+    <!-- <script language="JavaScript" src = "/js/get-local-changes.js" defer> </script> -->
     <!-- var editor = ace.edit("learnocaml-exo-editor-pane"); -->
     <!-- editor.setOptions({ fontFamily: 'Inconsolata', fontSize: "18px" }); -->
     <script language="JavaScript" src="/js/learnocaml-exercise.js" defer></script>
-    <script language="JavaScript" src = "/js/get-local-changes.js" defer> </script>
+    
   </head>
   <body>
     <!-- Should be kept untouched. -->
